@startuml ClassDiagramExtended
allowmixing
skinparam packageStyle rectangle
skinparam linetype ortho

title Money Manager - Extended Class Diagram

package "UI (JavaFX Controllers)" {
  class LoginController
  class MainController
  class DashboardController
  class TransactionController
  class BudgetController
  class GoalController
  class NoteController
}

package "Services" {
  class AuthService
  class TransactionService
  class BudgetService
  class GoalService
  class NoteService
  class DashboardService
  class MonthlyIncomeService
}

package "Repository Interfaces" {
  interface IUserRepo
  interface ITransactionRepo
  interface IBudgetRepo
  interface IMonthlyBalanceRepo
  interface IGoalRepo
  interface INoteRepo
  interface IUserSettingsRepo
}

package "JDBC Repositories" {
  class JdbcUserRepo
  class JdbcTransactionRepo
  class JdbcBudgetRepo
  class JdbcMonthlyBalanceRepo
  class JdbcGoalRepo
  class JdbcNoteRepo
  class JdbcUserSettingsRepo
  class DataAccessException
}

package "Domain Models" {
  class User
  class Transaction
  class Budget
  class MonthlyBalance
  class Goal
  class Contribution
  class Note
}

package "DTOs" {
  class TransactionDTO
  class BudgetDTO
  class GoalDTO
  class ContributionDTO
  class DashboardSnapshot
  class MonthlyTrend
}

package "Configuration" {
  class DatabaseConfig
  class DatabaseInitializer
}

' UI to Services
LoginController --> AuthService
TransactionController --> TransactionService
BudgetController --> BudgetService
GoalController --> GoalService
NoteController --> NoteService
DashboardController --> DashboardService
MainController --> DashboardController

' Services to repository interfaces
AuthService --> IUserRepo
TransactionService --> ITransactionRepo
BudgetService --> IBudgetRepo
BudgetService --> IMonthlyBalanceRepo
GoalService --> IGoalRepo
NoteService --> INoteRepo
DashboardService --> ITransactionRepo
DashboardService --> IGoalRepo
MonthlyIncomeService --> IUserSettingsRepo
MonthlyIncomeService --> ITransactionRepo
MonthlyIncomeService --> IMonthlyBalanceRepo

' Interface implementations
JdbcUserRepo ..|> IUserRepo
JdbcTransactionRepo ..|> ITransactionRepo
JdbcBudgetRepo ..|> IBudgetRepo
JdbcMonthlyBalanceRepo ..|> IMonthlyBalanceRepo
JdbcGoalRepo ..|> IGoalRepo
JdbcNoteRepo ..|> INoteRepo
JdbcUserSettingsRepo ..|> IUserSettingsRepo

' Repository config and DB
JdbcUserRepo --> DatabaseConfig
JdbcTransactionRepo --> DatabaseConfig
JdbcBudgetRepo --> DatabaseConfig
JdbcMonthlyBalanceRepo --> DatabaseConfig
JdbcGoalRepo --> DatabaseConfig
JdbcNoteRepo --> DatabaseConfig
JdbcUserSettingsRepo --> DatabaseConfig
DatabaseInitializer --> DatabaseConfig

' Domain model associations
IUserRepo ..> User
ITransactionRepo ..> Transaction
IBudgetRepo ..> Budget
IMonthlyBalanceRepo ..> MonthlyBalance
IGoalRepo ..> Goal
IGoalRepo ..> Contribution
INoteRepo ..> Note

' Service DTO usage
TransactionService ..> TransactionDTO
BudgetService ..> BudgetDTO
GoalService ..> GoalDTO
GoalService ..> ContributionDTO
DashboardService ..> DashboardSnapshot
DashboardService ..> MonthlyTrend

@enduml
